--- a/trucks.html
+++ b/trucks.html
@@ -18,7 +18,7 @@
         </div>
     
         <div class="navbar2">
-            <img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht">
+            <a href="index.html"><img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht"></a>
             <div id="Links">
                 <a href="cars.html">Cars</a>
                 <a href="#Trucks">Trucks</a>
@@ -57,7 +57,7 @@
                       <span id="min-val-display">0$</span>
                       <span id="max-val-display">200000$</span>
                     </div>
-                <
+                </div>
                 <p class="stock-div">Stock</p>
                 <input type="text" placeholder="Select an option" class="option">
                 <p class="collections-div">Collections</p>
