--- a/suvs.html
+++ b/suvs.html
@@ -18,11 +18,11 @@
         </div>
     
         <div class="navbar2">
-           <a href="index.html"> <img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht"></a>
+            <a href="index.html"><img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht"></a>
             <div id="Links">
                 <a href="cars.html">Cars</a>
                 <a href="#Trucks">Trucks</a>
-                <a href="#SUVs">SUVs</a>
+                <a href="SUVS.html">SUVs</a>
                 <a href="#New Arrivals">New Arrivals</a>
             </div>
             <div class="icons">
@@ -37,13 +37,13 @@
 
         <div class="Shop-all">
             <div class="cars">
-                <p class="Shop-all-cars">Shop All / SUVs</p>
-                <h2 class="CARS">SUVs</h2>
+                <p class="Shop-all-cars">Shop All / Trucks</p>
+                <h2 class="CARS">Trucks</h2>
                 <p class="collapse-all-div"><b>Collapse All -</b></p>
-                <button class="car-x-div">SUVs x</button>
+                <button class="car-x-div">Trucks x</button>
                  <b>Reset All</b><i class="fa-solid fa-rotate-right"></i>
                  <p class="price-div">Price</p>
-                 <div class="slider-container">
+                <div class="slider-container">
                     <div class="slider-labels">
                       <span id="min-val-label">$0</span>
                       <span id="max-val-label">$200000</span>
