--- a/suvs.html
+++ b/suvs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="suvs.css">
+    <link rel="stylesheet" href="SUVS.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -18,11 +18,11 @@
         </div>
     
         <div class="navbar2">
-            <a href="index.html"><img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht"></a>
+            <img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht">
             <div id="Links">
                 <a href="cars.html">Cars</a>
                 <a href="#Trucks">Trucks</a>
-                <a href="SUVS.html">SUVs</a>
+                <a href="#SUVs">SUVs</a>
                 <a href="#New Arrivals">New Arrivals</a>
             </div>
             <div class="icons">
@@ -37,13 +37,13 @@
 
         <div class="Shop-all">
             <div class="cars">
-                <p class="Shop-all-cars">Shop All / Trucks</p>
-                <h2 class="CARS">Trucks</h2>
+                <p class="Shop-all-cars">Shop All / SUVs</p>
+                <h2 class="CARS">SUVs</h2>
                 <p class="collapse-all-div"><b>Collapse All -</b></p>
-                <button class="car-x-div">Trucks x</button>
+                <button class="car-x-div">SUVs x</button>
                  <b>Reset All</b><i class="fa-solid fa-rotate-right"></i>
                  <p class="price-div">Price</p>
-                <div class="slider-container">
+                 <div class="slider-container">
                     <div class="slider-labels">
                       <span id="min-val-label">$0</span>
                       <span id="max-val-label">$200000</span>
