--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="Links">
                     <a href="cars.html">Cars</a>
                     <a href="trucks.html">Trucks</a>
-                    <a href="SUVs.html">SUVs</a>
+                    <a href="suvs.html">SUVs</a>
                     <a href="#New Arrivals">New Arrivals</a>
                 </div>
                 <div class="icons">
