--- a/suvs.html
+++ b/suvs.html
@@ -18,11 +18,11 @@
         </div>
     
         <div class="navbar2">
-            <img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht">
+            <a href="suvs.html"><img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht"></a>
             <div id="Links">
                 <a href="cars.html">Cars</a>
-                <a href="#Trucks">Trucks</a>
-                <a href="#SUVs">SUVs</a>
+                <a href="trucks.html">Trucks</a>
+                <a href="suvs.html">SUVs</a>
                 <a href="#New Arrivals">New Arrivals</a>
             </div>
             <div class="icons">
