--- a/cars.html
+++ b/cars.html
@@ -22,7 +22,7 @@
             <div id="Links">
                 <a href="cars.html">Cars</a>
                 <a href="trucks.html">Trucks</a>
-                <a href="SUVS.html">SUVs</a>
+                <a href="suvs.html">SUVs</a>
                 <a href="#New Arrivals">New Arrivals</a>
             </div>
             <div class="icons">
