--- a/trucks.html
+++ b/trucks.html
@@ -21,8 +21,8 @@
             <a href="index.html"><img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht"></a>
             <div id="Links">
                 <a href="cars.html">Cars</a>
-                <a href="#Trucks">Trucks</a>
-                <a href="SUVS.html">SUVs</a>
+                <a href="trucks.html">Trucks</a>
+                <a href="suvs.html">SUVs</a>
                 <a href="#New Arrivals">New Arrivals</a>
             </div>
             <div class="icons">
