--- a/suvs.html
+++ b/suvs.html
@@ -18,7 +18,7 @@
         </div>
     
         <div class="navbar2">
-            <a href="suvs.html"><img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht"></a>
+            <a href="index.html"><img src="Images/logo_xGP2vOtG.webp" alt="logo_4sHit9ht" id="logo_4sHit9ht"></a>
             <div id="Links">
                 <a href="cars.html">Cars</a>
                 <a href="trucks.html">Trucks</a>
